# passman

./: Cargo.toml  HELP.txt  README.md
.github/workflows/: ci.yml
src/: lib.rs  main.rs  state.rs
src/cli/: commands.rs  io.rs  parser.rs  stdin.rs  stdout.rs
src/cli/commands/: commands.rs  enums.rs  models.rs  parser.rs
src/domain/app/: error.rs  session.rs  state.rs
src/domain/cli/: commands.rs  field.rs  password_params.rs
src/domain/vault/: password_entry.rs  vault.rs  vault_file.rs
src/repository/vault/: vault_crypto.rs  vault_manager.rs  vault_manager_trait.rs
src/services/: password_service.rs  vault_service.rs
src/services/vault/: constants.rs  crypto.rs  models.rs  operations.rs  vault.rs  vault_manager.rs
src/services/vault/models/: password_entry.rs  vault.rs  vault_file.rs
src/utils/: constants.rs  passwords.rs  validation.rs  vectors.rs
tests/: test_input_validations.rs  test_vault_service.rs
tests/mocks/: mock_vault_manager.rs
