[package]
name = "passman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
zeroize = { version = "1.8.1", features = ["derive"] }
argon2 = { version = "0.5", features = ["password-hash"] }
aes-gcm-siv = "0.11"
rand = "0.9.0"
serde_json = "1.0"
base64 = "0.22.1"
secrecy = { version = "0.10.3", features = ["serde"] }
directories = "6.0.0"
chrono = "0.4.39"
colored = "2.0.0"
thiserror = "2.0.11"
arboard = "3.4.1"
rpassword = "7.3.1"
ctrlc = "3.4.5"
regex = "1.11.1"
lazy_static = "1.5.0"